--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 filterwarnings =
     error
     ignore:.*With-statements.*:DeprecationWarning
-addopts = -x -rf
+addopts = -rf
 junit_family = xunit2
