--- a/mypy.ini
+++ b/mypy.ini
@@ -1,13 +1,17 @@
 [mypy]
-disallow_untyped_defs = True
-disallow_any_unimported = True
+# Gradual type adoption - less strict for now
+python_version = 3.11
+check_untyped_defs = False
+disallow_untyped_defs = False
+disallow_untyped_calls = False
+disallow_any_unimported = False
 no_implicit_optional = True
-check_untyped_defs = True
-warn_return_any = True
-warn_unused_ignores = True
+warn_return_any = False
+warn_unused_ignores = False
 show_error_codes = True
 ignore_missing_imports = False
 
+# Ignore missing imports for third-party packages
 [mypy-pygraphviz.*]
 ignore_missing_imports = True
 
