--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
 build: off
 
 test_script:
-  - "%PYTHON%\\python.exe -m pytest --doctest-modules --cov transitions/"
+  - "%PYTHON%\\python.exe -m pytest --doctest-modules --cov tfsm/"
 
 #after_test:
 #  # This step builds your wheels.
