强化poe测试命令，使用xdist提升测试速度

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,9 +155,9 @@ install-dev = "uv pip install -e '.[all]'"
 install-all = "uv pip install -e '.[all]'"
 
 # Test tasks
-test = "uv run pytest tests/"
-test-cov = "uv run pytest --cov=tfsm --cov-report=html --cov-report=term tests/"
-test-no-diagrams = "uv run pytest tests/ --ignore=tests/test_codestyle.py"
+test = "uv run pytest -n auto tests/"
+test-cov = "uv run pytest -n auto --cov=tfsm --cov-report=html --cov-report=term tests/"
+test-no-diagrams = "uv run pytest -n auto tests/ --ignore=tests/test_codestyle.py"
 
 # Type checking
 mypy = "uv run mypy --config-file mypy.ini --strict tfsm"
