--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,5 +1,5 @@
 [tool.bumpversion]
-current_version = "0.9.5"
+current_version = "0.9.5.post1"
 parse = """(?x)
     ^
     (?P<major>0|[1-9]\\d*)\\.
