--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "tfism"
-version = "0.9.5"
+version = "0.9.5.post1"
 description = "A lightweight, object-oriented Python state machine implementation with many extensions."
 readme = "README.md"
 requires-python = ">=3.10"
